src/test/ui/error-codes/E0435.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/E0435.rs:5:17
   |
LL |     let foo: usize = 42;
   |     ------- help: consider using `const` instead of `let`: `const foo`
LL |     let _: [u8; foo];
   |                 ^^^ non-constant value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0435`.
